--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,18 @@
 //https://stackoverflow.com/questions/54015604/disable-python-import-sorting-in-vscode
 {
-    "jupyter.widgetScriptSources": [
-        "jsdelivr.com",
-        "unpkg.com"
-    ],
-    "yaml.schemas": {
-        "https://squidfunk.github.io/mkdocs-material/schema.json": "mkdocs.yml"
-    },
-    "yaml.customTags": [
-        "!ENV scalar",
-        "!ENV sequence",
-        "tag:yaml.org,2002:python/name:materialx.emoji.to_svg",
-        "tag:yaml.org,2002:python/name:materialx.emoji.twemoji",
-        "tag:yaml.org,2002:python/name:pymdownx.superfences.fence_code_format"
-    ],
-    "python.formatting.provider": "none",
-    "python.formatting.autopep8Args": [
-        "--ignore",
-        "E402"
-    ]
+  "jupyter.widgetScriptSources": ["jsdelivr.com", "unpkg.com"],
+  "yaml.schemas": {
+    "https://squidfunk.github.io/mkdocs-material/schema.json": "mkdocs.yml"
+  },
+  "yaml.customTags": [
+    "!ENV scalar",
+    "!ENV sequence",
+    "tag:yaml.org,2002:python/name:materialx.emoji.to_svg",
+    "tag:yaml.org,2002:python/name:materialx.emoji.twemoji",
+    "tag:yaml.org,2002:python/name:pymdownx.superfences.fence_code_format"
+  ],
+  "python.formatting.provider": "none",
+  "python.formatting.autopep8Args": ["--ignore", "E402"],
+  "python.linting.pylintEnabled": true,
+  "python.linting.enabled": true
 }
